# CopyBot-Back

./: Meorwik.session  Meorwik_.session  Meorwikk.session  Procfile  README.md  Railway.toml  Ruslan.session  Ruslan_.session  loader.py  main.py  project.toml  pyproject.toml  requirements.txt  settings.py
sender/app/api/: api.py
sender/app/api/endpoints/: routes.py
sender/app/config/: bot.py
sender/app/core/: logic.py
sender/app/logging/: sender_logging.py
sender/app/memory/: __init__.py
sender/app/memory/relational/: base.py  postgresql.py
sender/app/schemas/: models.py
sender/app/services/: __init__.py  parser.py  scheduler.py  watermark_remover.py
sender/app/services/parsers/: __init__.py  base.py  message_parser.py
sender/app/utils/: data_validator.py
sender_logging/: sender_logging.py
